# zc-agent-desk

./: .env.example  .gitignore  README.md  pyproject.toml  斑头雁全栈开发工程师--开放型笔试题.md
.hermes/plugins/zc-agent-desk/: __init__.py  plugin.yaml  policy.py
backend/zc_agent_desk/: __init__.py  app.py  hermes.py
backend/zc_agent_desk/workflows/: __init__.py  base.py  keyword_analysis.py  synthetic_keywords.json
config/: hermes-config.yaml
docs/: AI_COLLABORATION.md  ARCHITECTURE.md  DECISIONS.md  DESIGN.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  RECORDING.md
docs/superpowers/plans/: 2026-07-03-g2-frontend.md  2026-07-03-g3-hermes-integration.md  2026-07-05-chinese-documentation.md  2026-07-05-inline-run-trace.md  2026-07-05-workflow-runtime.md
docs/superpowers/specs/: 2026-07-03-g2-frontend-design.md  2026-07-05-chinese-documentation-design.md  (+3 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  main.tsx  runActivity.test.ts  runActivity.ts  sse.test.ts  styles.css  types.ts
scripts/: dev.sh  release_check.py  render_hermes_config.py  runtime_mode.sh  setup_hermes.sh
security/: macos-hermes.sb
tests/g1/: test_environment_contract.py  test_hermes_plugin_contract.py  test_macos_sandbox_policy.py
tests/g2/: test_mock_api.py
tests/g3/: test_business_bridge.py  test_developer_tool_policy.py  test_hermes_adapter.py  test_live_runtime.py
tests/g4/: test_release_contract.py
tests/g5/: test_dev_mode_contract.py  test_runtime_selection.py
tests/workflows/: test_keyword_analysis.py
(+9 files in other folders)
