[project]
name = "zc-agent-desk-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "pyyaml>=6,<7",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.28,<1", "pytest>=8,<10"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
